# Challenge-III-Webshop

./: .env.example  01_create_tables.sql  03_queries.sql  Product.sql  README.md  SETUP.md  TECHNICAL_DOCUMENTATION.md  UV_QUICK_REFERENCE.md  compose.yml  docker-compose.yml  orders.sql
backend/: Dockerfile  QUERIES.md  SETUP_COMPLETE.md  compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/shop/: admin.py  models.py  urls.py  views.py
backend/shop/management/commands/: load_sample_data.py
backend/shop/migrations/: 0001_initial.py
backend/webshop/: pyproject.toml  settings.py  urls.py
test/: data.yaml.txt  models.py.txt
webshop/: .env  Dockerfile  compose.yml  create_roles_and_permissions.py  db.sqlite3  docker-entrypoint.sh  init.sh  requirements.txt
webshop/shop/: admin.py  models.py  urls.py  views.py  views_cart.py  views_login.py  views_order.py  views_product.py  views_wishlist.py
webshop/shop/fixtures/: data.yaml
webshop/shop/migrations/: 0001_initial.py  0002_alter_cart_options_alter_cartitem_options_and_more.py  0002_product_image.py  0003_remove_customer_city_remove_customer_postal_code_and_more.py  0003_rename_ort_customer_city_and_more.py
webshop/shop/static/shop/css/: style.css
webshop/shop/templates/: account.html  base.html  cart.html  checkout.html  home.html  login.html  order_detail.html  orders.html  product_detail.html  products.html  register.html  wishlist.html
webshop/staticfiles/shop/css/: style.css
webshop/webshop/: settings.py  urls.py
